<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis</name>
  <version>0.0.0</version>
  <description>ROS 2 control and simulation package for robotis</description>
  <maintainer email="cd2918@naver.com">uon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>ros2launch</depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_model_path>${prefix}/share/robotis/resource</gazebo_model_path>
  </export>
</package>